JS-5 polyfills_of_deep_Clone_call_apply_bind  and Array and functions concepts

--- a/Javascript/Lec_4_polyfills_of_call_apply_bind_and_DeepCopy_ShallowCopy/index.html
+++ b/Javascript/Lec_4_polyfills_of_call_apply_bind_and_DeepCopy_ShallowCopy/index.html
@@ -14,6 +14,8 @@
     <h1>polyfills of call, apply and bind and shallow copy and deep copy</h1>
     <!--<script src="0_problem_stmt_prototype_vs__ptoto__.js"></script>-->
     <!--<script src="1_rest_spread_default_parameter.js"></script>-->
-    <script src="4_deep_copy_and_shallow_copy.js"></script>
+    <!--<script src="4_deep_copy_and_shallow_copy.js"></script>-->
+    <!--<script src="5_polyfills_of_deep_copy.js"></script>-->
+    <script src="2_polyfills_call_apply_bind.js"></script>
 </body>
 </html>
