--- a/Javascript/Lec_8_OOPS_2_JavaScript/index.html
+++ b/Javascript/Lec_8_OOPS_2_JavaScript/index.html
@@ -13,9 +13,8 @@
 </head>
 
 <body>
-    <h1>Object Creation and Immutibility</h1>
+    <h1>Object Creation and Immutability</h1>
     <script src="1_creation_of_objects.js"></script>
-
 </body>
 
 </html>
