OOPS-2 method overloading, method overriding, interfaces, freezing objects(immutable objects) and how to memoization

--- a/Javascript/Lec_8_OOPS_2_JavaScript/index.html
+++ b/Javascript/Lec_8_OOPS_2_JavaScript/index.html
@@ -13,8 +13,11 @@
 </head>
 
 <body>
-    <h1>Object Creation and Immutability</h1>
-    <script src="1_creation_of_objects.js"></script>
+    <h1>Object creation and Immutability</h1>
+    <!--<script src="1_creation_of_objects.js"></script>-->
+    <!--<script src="2_method_overloading _method_overriding.js"></script>-->
+    <!--<script src="3_immutable_objects.js"></script>-->
+    <script src="4_how_to_memoize_A_function.js"></script>
 </body>
 
 </html>
