Nested Comment box project completed and Browser perf and memory leaks

--- a/FE_Machine_Coding/3_JS_Mini_Projects/JS_Mini_Project_1_Countdown_Timer/index.html
+++ b/FE_Machine_Coding/3_JS_Mini_Projects/JS_Mini_Project_1_Countdown_Timer/index.html
@@ -27,6 +27,6 @@
      </div>
 
      <link href="./style.css" rel="stylesheet">
-     <script type="module" src="./timer.js"></script>   
+     <script  defer type="module" src="./timer.js"></script>   
 </body>
 </html>
