--- a/FE_Machine_Coding/4_Custom_Event_Event_Bubbling_Capturing_Delegation/4_Nested_Comment_Box_Project/index.html
+++ b/FE_Machine_Coding/4_Custom_Event_Event_Bubbling_Capturing_Delegation/4_Nested_Comment_Box_Project/index.html
@@ -18,7 +18,7 @@
         <ul id="commentList"></ul>
     </div>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
