--- a/FE_Machine_Coding/5_Browser_perf_and_memory_leaks/3_Improving_web_Performance.html
+++ b/FE_Machine_Coding/5_Browser_perf_and_memory_leaks/3_Improving_web_Performance.html
@@ -1,7 +1,7 @@
 <!-- 
 
    Improving web performance:
-       - Rendering Optimisation:
+       - Rendering Optimization:
 
         1. While write your HTML code:
             - avoiding the unnecessary elemnts/tags.
@@ -11,8 +11,8 @@
             - use flexbox or grid layouts 
             - Avoid the fixed dimensions
             - use % or em or rem units for the responsive designs.
-        3. Image Optimisation -> 
-            - compress and optimise images.
+        3. Image Optimization -> 
+            - compress and optimize images.
             - modern format of images WebP wheresoever supporting try to use it.
             - use responsive images like you can use brakpoints via media query or 
               picture tag -> srcset and sizes(media query)
@@ -30,7 +30,7 @@
             - critical CSS -> required for first paint or above the fold
             - non-critical CSS -> for below fold
 
-       - Javascript Optimisation:
+       - Javascript Optimization:
         1. use defer or async for the external JS files
         2. Use code splitting of your JS files
         3. Minify the javascript
