Web worker, client side storage and Kanban board project part-1

--- a/FE_Machine_Coding/7_Fetch_API_Typeahead_System_Debouncing_Throttling/1_Fetch_API.html
+++ b/FE_Machine_Coding/7_Fetch_API_Typeahead_System_Debouncing_Throttling/1_Fetch_API.html
@@ -1,6 +1,6 @@
 <!-- 
    Fetch API:
-      - Provided by the browser, not by the jaavascript itself.
+      - Provided by the browser, not by the javascript itself.
       - helps javascript developers to make API calls for submitting or fetching data from servers.
       - We use fetch(url,options) which returns a promise to resolve or reject the response of the request that you made.
       - provides you a fexible and promise-based approach for handling the async operations.
