React-2-CRA and state and parent-child communication via lifting state up

--- a/ReactJS/Lec-1_Introduction_To_React/index.html
+++ b/ReactJS/Lec-1_Introduction_To_React/index.html
@@ -30,12 +30,12 @@
         }
 
         const Main = () => {
-            return (<div>
+            return <div>
                     <Hello username="Ashwani" /> 
                     <Hello username="Rohant" /> 
                     <Hello username="Shiv" /> 
                     <Hello username="Binay" /> 
-                </div>);
+                </div>;
                 
         }
 
