--- a/ReactJS/Lec-5_React_Context_API/context-api-concepts/index.html
+++ b/ReactJS/Lec-5_React_Context_API/context-api-concepts/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-commerce App</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kanit&display=swap">
-    <link href="./index.css" rel="stylesheet"/>
+    <title>Context API</title>
   </head>
   <body>
     <div id="root"></div>
